--- a/templates/cnets-storage/config.yml
+++ b/templates/cnets-storage/config.yml
@@ -1,6 +1,7 @@
 name: cnets-storage
-description: Fujitsu CNETS Enterprise File Sync and Share
-version: 1.0.0
-category: Fujitsu File Synchronisation
+description: |
+  Fujitsu CNETS Enterprise File Sync and Share
+version: v1.0.0
+category: File Synchronisation
 projectURL: https://github.com/MadHosoi/k5-rancher
 
